tests/neg-custom-args/captures/box-adapt-cases.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/box-adapt-cases.scala:15:10 ------------------------------
15 |  x.value(cap => cap.use())  // error
   |          ^^^^^^^^^^^^^^^^
   |          Found:    (cap: Cap^{io}) ->{io} Int
   |          Required: Cap^{io} -> Int
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/box-adapt-cases.scala:29:10 ------------------------------
29 |  x.value(cap => cap.use())  // error
   |          ^^^^^^^^^^^^^^^^
   |          Found:    (cap: Cap^?) ->{io, fs} Int
   |          Required: Cap^{io, fs} ->{io} Int
   |
   | longer explanation available when compiling with `-explain`
